--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^7.9.6",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
+    "vite-plugin-pwa": "^1.2.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
