--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "5000:5000"
     volumes:
       - ./server/uploads:/app/uploads
-      - ./server/prod.sqlite:/app/database.sqlite
+      - ./server/data:/app/data
     environment:
       - PORT=5000
       - SECRET_KEY=${SECRET_KEY:-werk-secret-key-gen-z}
