--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,6 +3,7 @@ FROM node:18-alpine
 WORKDIR /app
 
 COPY package*.json ./
+RUN apk add --no-cache python3 make g++
 RUN npm install --production
 
 COPY . .
