Fix dashboard 500 error & Rename to WERK IDE

--- a/server/settings.json
+++ b/server/settings.json
@@ -6,6 +6,6 @@
         "user": "",
         "pass": "",
         "fromEmail": "",
-        "fromName": "WERK OS"
+        "fromName": "WERK IDE"
     }
 }
