--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 server/data/database.sqlite
 server/data/database.sqlite
 server/data/database.sqlite
+
+# runtime data
+server/data/
+*.sqlite
+*.sqlite-journal
