--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.11",
+    "pdf-lib": "^1.17.1",
     "pg": "^8.17.1",
     "pg-hstore": "^2.3.4",
     "puppeteer": "^24.37.2",
