--- a/server/package.json
+++ b/server/package.json
@@ -24,8 +24,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
+    "node-qpdf2": "^2.3.0",
     "nodemailer": "^7.0.11",
-    "pdf-lib": "^1.17.1",
     "pg": "^8.17.1",
     "pg-hstore": "^2.3.4",
     "puppeteer": "^24.37.2",
